Remove useless HTTP headers

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -129,7 +129,7 @@
         <add assembly="RunCsJob.Api" />
       </assemblies>
     </compilation>
-    <httpRuntime targetFramework="4.7" maxRequestLength="16000000" />
+    <httpRuntime targetFramework="4.7" maxRequestLength="16000000" enableVersionHeader="false" />
     <customErrors mode="Off" />
     <globalization culture="ru-RU" uiCulture="ru" />
     <httpModules>
@@ -146,12 +146,14 @@
       <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
     </modules>
+
     <staticContent>
       <mimeMap fileExtension="woff" mimeType="application/font-woff" />
       <mimeMap fileExtension="woff2" mimeType="application/font-woff2" />
       <mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
       <mimeMap fileExtension="zip" mimeType="application/zip" />
     </staticContent>
+
     <security>
       <requestFiltering>
         <requestLimits maxAllowedContentLength="160000000" />
@@ -172,6 +174,7 @@
          <remove name="TRACEVerbHandler" />
          <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+
     <rewrite>
       <rules>
         <rule name="redirect from azurewebsites and WWW to custom domain" stopProcessing="true">
@@ -184,7 +187,18 @@
         </rule>
       </rules>
     </rewrite>
-  <validation validateIntegratedModeConfiguration="false" /></system.webServer>
+
+	<httpProtocol>
+	  <customHeaders>
+		<clear />
+		<remove name="X-Powered-By" />
+		<remove name="X-AspNet-Version" />
+	  </customHeaders>
+	</httpProtocol>
+
+    <validation validateIntegratedModeConfiguration="false" />
+
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
