Mobile layout for checking queue filter Black explanation for choice block in quizes Remove .io in highlightinh Status for quiz in it's passed Don't include `` as pre if it's in generic stack trace

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -857,6 +857,7 @@
     <Content Include="Scripts\buttons.js" />
     <Content Include="Scripts\certificates-editor.js" />
     <Content Include="Scripts\clipboard.min.js" />
+    <Content Include="Scripts\connect-checkboxes.js" />
     <Content Include="Scripts\course-statistics.js" />
     <Content Include="Scripts\diagnostics.js" />
     <Content Include="Scripts\forms.replace-action.js" />
