--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -218,7 +218,12 @@
   <ItemGroup>
     <Compile Include="CSharp\CourseValidator_ReportError_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportWarning_should.cs" />
-    <Compile Include="CSharp\ExponentiationValidator_should.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\ExponentiationValidator_should.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\DegreeMoreThanThree.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\NoMathPow.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Incorrect\DegreeEqualsThree.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Incorrect\DegreeEqualsTwo.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Incorrect\TwoErrorsInFile.cs" />
     <Compile Include="CSharp\IndentsValidation\TestData\Correct\BracesMightNotBeAlignedIfOpenBraceDoesntHaveLeadingTrivia.cs" />
     <Content Include="CSharp\IndentsValidation\TestData\Correct\TopLevelNodesCanBeIndented.cs" />
     <Content Include="CSharp\IndentsValidation\TestData\Correct\IfOpenBraceGrandparentIsMultilineThenContentIndentedFromGrandparent.cs" />
