--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ bld/
 *.VisualState.xml
 TestResult.xml
 
+#Test Examples
+/src/uLearn.Tests/CSharp/ExampleFiles
+
 # Build Results of an ATL Project
 [Dd]ebugPS/
 [Rr]eleasePS/
