BoolCompareValidator: теперь ошибки репортятся только при сравнении на [не]равенство, чтобы лишнего не нарепортить случайно. Добавил тест, что при неполном построении семантической модели ничего не падает, просто ошибки перестают репортиться. Добавил еще немного тестов.

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -218,6 +218,7 @@
   <ItemGroup>
     <Compile Include="CSharp\BoolCompareValidation\BoolCompareValidator_should.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Correct\NullableCompare.cs" />
+    <Compile Include="CSharp\BoolCompareValidation\TestData\Correct\UnknownTypes.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Correct\SimpleIf.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Incorrect\IfWithBool.cs" />
     <Compile Include="CSharp\BoolCompareValidation\TestData\Incorrect\TernaryOperatorWithBool.cs" />
