Fix checking double variables such as 2.0, add some test cases.

--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -225,7 +225,8 @@
     <Compile Include="CSharp\CourseValidator_ReportError_should.cs" />
     <Compile Include="CSharp\CourseValidator_ReportWarning_should.cs" />
     <Compile Include="CSharp\ExponentiationValidation\ExponentiationValidator_should.cs" />
-    <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\DegreeMoreThanThree.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\DegreeIsWrappedByVariable.cs" />
+    <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\DegreeNotEqualsToTwoOrThree.cs" />
     <Compile Include="CSharp\ExponentiationValidation\TestData\Correct\NoMathPow.cs" />
     <Compile Include="CSharp\ExponentiationValidation\TestData\Incorrect\DegreeEqualsThree.cs" />
     <Compile Include="CSharp\ExponentiationValidation\TestData\Incorrect\DegreeEqualsTwo.cs" />
