add validation without sem model

--- a/src/RunCsJob/test/test.csproj
+++ b/src/RunCsJob/test/test.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <CscToolPath>C:\Users\andgein\Documents\Work\ulearn\uLearn\src\RunCsJob\bin\Debug\Microsoft.Net.Compilers.2.2.0</CscToolPath>
+    <CscToolPath>C:\ulearn\src\RunCsJob\bin\Debug\Microsoft.Net.Compilers.2.2.0</CscToolPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
