--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -6,10 +6,11 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Build" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.2.0" targetFramework="net47" />
-  <package id="MSBuild" version="0.1.2" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="NUnit" version="3.7.1" targetFramework="net47" />
@@ -39,6 +40,7 @@
   <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
