SystemAccesses. Access for viewing all profiles
Quiz matching: move blocks on touch devices by clicking on them

--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -106,6 +106,7 @@
     <Compile Include="DataContexts\SlideHintRepo.cs" />
     <Compile Include="DataContexts\SlideRateRepo.cs" />
     <Compile Include="DataContexts\StepikRepo.cs" />
+    <Compile Include="DataContexts\SystemAccessesRepo.cs" />
     <Compile Include="DataContexts\TextsRepo.cs" />
     <Compile Include="DataContexts\ULearnDb.cs" />
     <Compile Include="DataContexts\ULearnUserManager.cs" />
@@ -489,6 +490,10 @@
     <Compile Include="Migrations\201711191919009_AddDefaultProhibitFutherReviewInGroup.Designer.cs">
       <DependentUpon>201711191919009_AddDefaultProhibitFutherReviewInGroup.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711192044080_AddSystemAccesses.cs" />
+    <Compile Include="Migrations\201711192044080_AddSystemAccesses.Designer.cs">
+      <DependentUpon>201711192044080_AddSystemAccesses.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AdditionalScore.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
@@ -522,6 +527,7 @@
     <Compile Include="Models\StepikAccessToken.cs" />
     <Compile Include="Models\StepikExportProcess.cs" />
     <Compile Include="Models\StepikExportSlideAndStepMap.cs" />
+    <Compile Include="Models\SystemAccess.cs" />
     <Compile Include="Models\TextBlob.cs" />
     <Compile Include="Models\UnitAppearance.cs" />
     <Compile Include="Models\UserExerciseSubmission.cs" />
@@ -812,6 +818,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711191919009_AddDefaultProhibitFutherReviewInGroup.resx">
       <DependentUpon>201711191919009_AddDefaultProhibitFutherReviewInGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711192044080_AddSystemAccesses.resx">
+      <DependentUpon>201711192044080_AddSystemAccesses.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
