Fix issues with Microsoft.Build, downgrade it. Upgrade Microsoft.Net.Compilers

--- a/src/.nuget/NuGet.Config
+++ b/src/.nuget/NuGet.Config
@@ -3,4 +3,7 @@
   <solution>
     <add key="disableSourceControlIntegration" value="true" />
   </solution>
+  <packageSources>
+    <add key="MsBuild Private Feed" value="https://dotnet.myget.org/F/msbuild/api/v3/index.json" />
+  </packageSources>
 </configuration>
