--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -8,9 +8,15 @@
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net47" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Build" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Engine" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Tasks.Core" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="14.3.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net47" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net47" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net47" />
