--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -6,11 +6,14 @@
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
-  <package id="Microsoft.Build" version="15.3.409" targetFramework="net47" />
-  <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Engine" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Tasks.Core" version="14.3.0" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="14.3.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.2.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net47" />
   <package id="NUnit" version="3.7.1" targetFramework="net47" />
