Guest version of ordering and matching
Try to set up MsBuild 15.0 on server

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -138,6 +138,9 @@
       <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
     </httpModules>
   </system.web>
+  <system.serviceModel>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
+  </system.serviceModel>  
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
