Okay, let's try again

--- a/src/uLearn.Tests/packages.config
+++ b/src/uLearn.Tests/packages.config
@@ -9,6 +9,7 @@
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
   <package id="Microsoft.Build" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build.Engine" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.Build.Tasks.Core" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.3.409" targetFramework="net47" />
