--- a/src/Stepik.Api.Tests/packages.config
+++ b/src/Stepik.Api.Tests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.0.0" targetFramework="net47" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net47" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
