--- a/src/nuget.config
+++ b/src/nuget.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <add key="MsBuild Private Feed" value="https://dotnet.myget.org/F/msbuild/api/v3/index.json" />
   </packageSources>
 </configuration>
