--- a/src/RunCsJob.Service/packages.config
+++ b/src/RunCsJob.Service/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.3.409" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.4.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.4.0" targetFramework="net47" />
@@ -31,6 +33,7 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
