--- a/src/Notifications/packages.config
+++ b/src/Notifications/packages.config
@@ -7,6 +7,18 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.3.409" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net47" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net47" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net47" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net47" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net47" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net47" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net47" />
   <package id="Telegram.Bot" version="10.4.0" targetFramework="net47" />
 </packages>
