--- a/src/Notifications.Service/packages.config
+++ b/src/Notifications.Service/packages.config
@@ -3,5 +3,17 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
   <package id="Graphite" version="1.3.0.0" targetFramework="net47" />
   <package id="log4net" version="2.0.8" targetFramework="net47" />
+  <package id="Microsoft.Build.Framework" version="15.3.409" targetFramework="net47" />
+  <package id="Microsoft.Build.Utilities.Core" version="15.3.409" targetFramework="net47" />
   <package id="OctoPack" version="3.6.1" targetFramework="net47" developmentDependency="true" />
+  <package id="System.Collections" version="4.0.11" targetFramework="net47" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net47" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net47" />
+  <package id="System.Linq" version="4.1.0" targetFramework="net47" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net47" />
+  <package id="System.Runtime" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net47" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net47" />
+  <package id="System.Threading.Thread" version="4.0.0" targetFramework="net47" />
 </packages>
