Add TelegramAppender to XQueueWather

--- a/src/Notifications.Service/App.config
+++ b/src/Notifications.Service/App.config
@@ -71,7 +71,7 @@
     <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, uLearn">
       <threshold value="Error" />
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
+        <conversionPattern value="%date %-5level %logger — %message%newline" />
       </layout>
     </appender>
       
