--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -59,7 +59,7 @@
 		<foreColor value="Green" />
 	  </mapping>
 	  <layout type="log4net.Layout.PatternLayout">
-		<conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
+		<conversionPattern value="%date %-5level %logger — %message%newline" />
 	  </layout>
 	</appender>
 
