--- a/src/XQueueWatcher.Service/App.config
+++ b/src/XQueueWatcher.Service/App.config
@@ -12,12 +12,17 @@
     <add name="DefaultConnection" connectionString="" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
     <add name="statsd" connectionString="" />
+
+    <add key="ulearn.telegram.botToken" value="" />
+    <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
+    <add key="ulearn.telegram.errors.channel" value="" />
   </connectionStrings>
   <log4net>
     <root>
       <level value="DEBUG" />
       <appender-ref ref="FileAppender" />
       <appender-ref ref="ConsoleAppender" />
+      <appender-ref ref="TelegramAppender" />
     </root>
     <appender name="FileAppender" type="log4net.Appender.FileAppender">
       <file value="logs\\xqueuewatcher.log" />
@@ -41,6 +46,19 @@
         <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
       </layout>
     </appender>
+
+    <!--
+     Для работы этого аппендера должны быть установлены переменные:
+       ulearn.telegram.botToken
+       ulearn.telegram.errors.channel 
+    -->
+    <appender name="TelegramAppender" type="ulearn.Logging.TelegramAppender, uLearn">
+      <threshold value="Error" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level %logger — %message%newline" />
+      </layout>
+    </appender>
+  
   </log4net>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
