Fix configuration's variables for XQueueWatcher

--- a/src/XQueueWatcher.Service/App.config
+++ b/src/XQueueWatcher.Service/App.config
@@ -12,11 +12,12 @@
     <add name="DefaultConnection" connectionString="" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
     <add name="statsd" connectionString="" />
-
+  </connectionStrings>
+  <appSettings>
     <add key="ulearn.telegram.botToken" value="" />
     <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
     <add key="ulearn.telegram.errors.channel" value="" />
-  </connectionStrings>
+  </appSettings>
   <log4net>
     <root>
       <level value="DEBUG" />
