--- a/src/XQueueWatcher/App.config
+++ b/src/XQueueWatcher/App.config
@@ -12,11 +12,12 @@
     <add name="DefaultConnection" connectionString="Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
     <add name="statsd" connectionString="" />
-
-    <add key="ulearn.telegram.botToken" value="" />
-    <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
-    <add key="ulearn.telegram.errors.channel" value="" />
   </connectionStrings>
+  <appSettings>
+      <add key="ulearn.telegram.botToken" value="" />
+      <!-- Канал в телеграме, куда отправлять информацию об ошибках -->
+      <add key="ulearn.telegram.errors.channel" value="" />
+  </appSettings>
   <log4net>
 	<root>
 	  <level value="DEBUG" />
