Add Microsoft.Build as referense to RunCsJob.Service

--- a/src/RunCsJob.Service/packages.config
+++ b/src/RunCsJob.Service/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net47" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net47" />
+  <package id="Microsoft.Build" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Framework" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Tasks.Core" version="15.5.180" targetFramework="net47" />
   <package id="Microsoft.Build.Utilities.Core" version="15.5.180" targetFramework="net47" />
